--- a/WebContent/css/contents.css
+++ b/WebContent/css/contents.css
@@ -84,3 +84,78 @@
 .member .login_form .search_btn input[type=submit]{background:#87b350; color:#fff; width:100%; border:none; font-size:18px; font-weight:bold; padding:10px 0; margin-top:20px;}
 
 
+/* ==================================================
+	board
+================================================== */
+.bbs{position:relative; width:100%; height:100%; overflow:hidden; /*min-width:320px;*/ clear:both;}
+.bbs a:hover{color:#000;}
+
+/* list */
+.bbs .list{border-collapse:collapse; border-spacing:0; box-sizing:border-box;}  /* tr에 shadow_down 클래스 사용하는 경우 border-collapse:separate; 으로 변경*/
+.bbs .list thead{border-top:2px solid #c3d69b; border-bottom:1px solid #c3d69b;}
+.bbs .list thead th{padding:15px 20px; font-size:13px; height:20px; line-height:14px; color:#333;}
+.bbs .list td{text-align:center; padding:8px 10px; border-bottom:1px solid #d9d9d9;}
+.bbs .list tbody tr:hover{background:#f6f6f6;} /*마우스오버 배경칼라지정*/
+.bbs .list .notice{background:#f9f9f9; } /*탑공지  배경칼라지정*/
+.bbs .list span.comment{color:#999; font-size:12px !important; font-weight:normal !important;} /*댓글수*/
+.bbs .list .notice_ico{display:none;}
+.bbs .list .image img{width:80px; height:auto;}
+.bbs .list .title span{font-size:15px; font-weight:bold;}
+/** tr에 shadow_down 클래스 사용하는 경우 -  테두리 박스에 그림자처리 **/
+.bbs .list tr.shadow_down th{height:35px;  background:#fff; box-shadow:0 2px 3px rgba(0, 0, 0, 0.08); -webkit-box-shadow:0 2px 3px rgba(0, 0, 0, 0.08); -moz-box-shadow:0 2px 3px rgba(0, 0, 0, 0.08); border-top:1px solid #d4d4d4; border-bottom:1px solid #d4d4d4; border-left:none; border-right:none; font-size:12px;}
+.bbs .list tr.shadow_down th:first-child{border-left:1px solid #d4d4d4; box-shadow:0;}
+.bbs .list tr.shadow_down th:last-child{border-right:1px solid #d4d4d4; box-shadow:0;}
+/** tr에 bgColor 클래스 사용하는 경우 -  배경칼라처리 **/
+.bbs .list thead.bgColor{border-top:none; border-bottom:none;}
+.bbs .list thead.bgColor th{padding:10px 20px; font-size:13px; height:20px; line-height:14px; color:#fff; background:#404143;}
+
+
+/* search */
+.bbsSearch {min-height:32px; -webkit-box-sizing:border-box; -moz-box-sizing:border-box; box-sizing:border-box; z-index:10; width:500px; margin:20px auto 15px;} 
+.bbsSearch input[type='text'] {height:32px; box-sizing:border-box; padding:5px 30px 5px 5px; border:0; width:100%; line-height:32px; background-color:#fff; border:1px solid #c7c8cc; vertical-align:middle;}
+.bbsSearch input[type='button'] {border:0; height:32px; width:32px; text-indent:-9999em; position:absolute; top:0; right:5px; background:url('/img/ico_search.png') no-repeat center center ; display:inline-block;}
+.bbsSearch .srchSelect .selectric-dSelect {float:left; width:148px; color:#666;}
+.bbsSearch .searchWord {float:left; position:relative; width:345px; margin-left:5px;}
+
+.bbsSearch {min-height:32px; -webkit-box-sizing:border-box; -moz-box-sizing:border-box; box-sizing:border-box; z-index:10; max-width:500px; width:100%; margin:20px auto 15px;} 
+.bbsSearch input[type='text'] {height:32px; box-sizing:border-box; padding:5px 30px 5px 5px; border:0; width:100%; line-height:32px; background-color:#fff; border:1px solid #c7c8cc; vertical-align:middle;}
+.bbsSearch input[type='button'] {border:0; height:32px; width:32px; text-indent:-9999em; position:absolute; top:0; right:5px; background:url('/img/ico_search.png') no-repeat center center ; display:inline-block;}
+.bbsSearch .srchSelect .selectric-dSelect {float:left; width:148px; color:#666;}
+.bbsSearch .searchWord {float:left; position:relative; width:345px; margin-left:5px;}
+.bbsSearch .srchSelect {float:left; display:block;  }
+.bbsSearch .srchSelect select {height:32px; padding:0 10px; box-sizing:border-box; }
+
+/* view */
+.bbs .view{}
+.bbs .view{width:100%; border-top:2px solid #c3d69b;}
+.bbs .view .title > dl{width:100%; padding:20px; border-bottom:1px solid #c3d69b; background:#fafafa;}
+.bbs .view .title > dl > dt{font-size:18px; color:#000; font-weight:bold;}
+.bbs .view .title > dl > dd{display:inline-block; font-size:14px; color:#999; margin-top:5px; }
+.bbs .view .title > dl > dd.name:after{content:"|"; display:inline-block; margin:0 10px; font-size:14px; color:#e4e4e4;}
+.bbs .view .cont{padding:20px; min-height:200px;  border-bottom:1px solid #e4e4e4; }
+.bbs .view .reply{}
+.bbs .view .reply > dl{width:100%; background:#f4f4f4; padding:20px 5%;}
+.bbs .view .reply > dl > dt{ padding:20px 0; font-size:22px; color:#000; position:relative;}
+.bbs .view .reply > dl > dt > span{display:block; font-size:16px; color:#999;}
+.bbs .view .reply > dl > dt:after {content:""; position:absolute; width:17px; height:1px; background-color:#000; bottom:0; left:3px;}
+.bbs .view .reply > dl > dd{ font-size:16px; color:#5c5d63; padding:20px 0;}
+.bbs .view .file{padding:10px 20px; overflow:hidden; border-bottom:1px solid #e4e4e4;}
+.bbs .view .file dt{float:left; width:80px; color:#999;}
+.bbs .view .file dd{float:left; text-decoration:underline !important; color:#00aeef; }
+
+
+
+/* 페이징처리 */
+.pagenate {width:100%; clear:both;}
+.pagenate {text-align:center; margin:20px auto 0;}
+.pagenate li {display:inline-block;}
+.pagenate li:first-child { margin-left:0px; }
+.pagenate li a{display:inline-block; text-decoration:none; padding:0; width:30px; height:30px; line-height:30px; border:1px solid #c7c8cc; box-sizing:border-box; margin-left:-1px; vertical-align:middle;}
+.pagenate li a:hover{background:#f6f6f6; font-weight:bold; text-decoration:none !important;}
+.pagenate li a.board { text-indent:-9999em; margin-left:4px; }
+.pagenate li a.board.first {background:#f3f3f3 url('/img/ico_first.png') no-repeat center center;}
+.pagenate li a.board.prev {margin-right:30px; background:#efefef url('/img/ico_prev.png') no-repeat center center;}
+.pagenate li a.board.next {margin-left:30px; background:#efefef url('/img/ico_next.png') no-repeat center center;}
+.pagenate li a.board.last {background:#f3f3f3 url('/img/ico_last.png') no-repeat center center;}
+.pagenate li a.current {color:#fff; background-color:#c3d69b; font-weight:bold;  border:1px solid #c3d69b;}
+
