--- a/WebContent/css/common.css
+++ b/WebContent/css/common.css
@@ -88,7 +88,8 @@ html, body {
 .head_top .size .login_info .top_area {height:30px; text-align:right; padding-right:10px;}
 .head_top .size .login_info .title_area {height:30px; text-align:left; }
 .head_top .size .login_info .title_area span {color:#000000; padding-left:10px; font-size:15px;}
-.head_top .size .login_info .middle_area {padding-bottom:100px; text-align:center;}
+.head_top .size .login_info .middle_area {text-align:center;}
+.head_top .size .login_info .bottom_area {padding-bottom:30px; text-align:left; padding-left:10px; clear:both;}
 .head_top .size .login_info .middle_area .input_area {text-align:center; padding-right:10px; width:200px; float:left; height:70px;}
 .head_top .size .login_info .middle_area .input_area input[type=text]{margin-bottom:6px;}
 .head_top .size .login_info .middle_area .login_btn input[type=submit]{
