--- a/WebContent/css/contents.css
+++ b/WebContent/css/contents.css
@@ -251,4 +251,4 @@
 .bbs .movie .review_area .review_list .review_contents{font-size:16px;min-height:200px;padding-top:5px;}
 .bbs .movie .review_area .review_list .review_etc{width:100%;}
 .bbs .movie .review_area .review_list .review_date{font-size:14px;bottom:0;float:left;}
-.bbs .movie .review_area .review_list .review_btn{text-align:right;}
+.bbs .movie .review_area .review_list .review_btn{text-align:right;height:30px;}
