--- a/WebContent/css/contents.css
+++ b/WebContent/css/contents.css
@@ -252,3 +252,73 @@
 .bbs .movie .review_area .review_list .review_etc{width:100%;}
 .bbs .movie .review_area .review_list .review_date{font-size:14px;bottom:0;float:left;}
 .bbs .movie .review_area .review_list .review_btn{text-align:right;height:30px;}
+
+
+/* dialogue */
+.dialogue {width:100%;}
+.dialogue {text-align:center; margin:20px auto 0;}
+.dialogue li {display:inline-block;}
+.dialogue li:first-child { margin-left:0px; }
+.dialogue li a {display:inline-block; text-decoration:none; padding:0; width:30px; height:30px; line-height:30px; border-radius:30px; border:1px solid #c7c8cc; box-sizing:border-box; margin-left:-1px;}
+.dialogue li a:hover{background:#d7eaf0;}
+.dialogue li a.board { text-indent:-9999em; margin-left:4px; }
+.dialogue li a.board.first {background:#f3f3f3 url('/img/ico_first.png') no-repeat center center;}
+.dialogue li a.board.prev {margin-right:30px; background:#efefef url('/img/ico_prev.png') no-repeat center center;}
+.dialogue li a.board.next {margin-left:30px; background:#efefef url('/img/ico_next.png') no-repeat center center;}
+.dialogue li a.board.last {background:#f3f3f3 url('/img/ico_last.png') no-repeat center center;}
+.dialogue li.month {font-weight:bold; color:#000; font-size:24px;}
+
+
+
+.dialogueList{position:relative;}
+.dialogueList .title {font-size:30px; padding-left:12px;}
+.dialogueList .contents{font-size:20px; font-weight:500; min-height:40px; text-align:left; padding-left:12px;}
+.dialogueList table th{background:#c3d69b; color:#fff; height:32px; font-size:16px; border:#c4c4c4 1px solid; }
+.dialogueList table td{text-align:center; padding:8px 5px; border:#c4c4c4 1px solid; font-size:12px; text-align:left; vertical-align:top;}
+.dialogueList table td span.date{font-size:12px;}
+.dialogueList table td span{display:block;}
+.dialogueList a:hover{color:#005ddc !important; text-decoration:underline;}
+.dialogueList .del_btn{background:#6e6f72; color:#fff; cursor:pointer; padding:0; width:22px; height:22px; line-height:12px; vertical-align:top;}
+.dialogueList .poster_img {width:90px; height:140px;}
+.dialogueList .totalPrice {font-size:30px;font-weight:800;}
+.dialogueList label {margin-right:10px;}
+.dialogueList label {margin-left:3px;}
+.dialogueList input[type=text] {width:100px;}
+.dialogueList .btn {.btn {font-size:14px; text-decoration:none !important; white-space:nowrap; display:inline-block; vertical-align:baseline; position:relative; cursor:pointer; padding:4px 20px; min-width:64px; border:2px solid #c3d69b; color:#fff !important; margin:0 2px; text-align:center; font-weight:bold; border-radius:5px; background-color:#c3d69b;}}
+
+.dialogue_wr{width:600px; height:610px; position:absolute; left:50%; top:50%; margin-left:-300px; margin-top:-165px;display:none;z-index:9100;}
+.dialogue_wr .box{width:600px; height:600px; margin:auto; border:1px solid #fff;  padding:20px; box-sizing:border-box; background:#fff !important;}
+.dialogue_wr .box p{font-size:14px !important; color:#000;}
+.dialogue_top{background:#c3d69b;}
+.dialogue_top .close{float:right; display:block; width:40px; height:40px; background:url(/img/ico_close.png) no-repeat; background-size:100%; cursor:pointer;}
+.dialogue_top .title{font-size:24px; color:#fff;padding-left:10px;}
+#mask {
+    position:absolute; 
+    z-index:9000; 
+    background-color:#000; 
+    display:none; 
+    left:0; 
+    top:0;
+}
+
+/* 예매 */
+.bbs .ticket {width:100%; border-top:2px solid #333; border-bottom:1px solid #999;  padding:20px 0; position:relative;}
+.bbs .ticket > ul{overflow:hidden; width:102.3333%; margin-left:-2.3333%; margin-top:-20px;}
+.bbs .ticket > ul > li{border:1px solid #e7e7e7; width:31%; margin:20px 0 0 2.3333%; float:left; padding:15px; box-sizing:border-box;}
+.bbs .ticket > ul > li > a{width:100%; height:100%; display:block; text-align:center;}
+.bbs .ticket > ul > li > a dt{width:49%;height:auto; ; overflow:hidden; float:left;}
+.bbs .ticket > ul > li > a dt img{width:120px;height:171px; }
+.bbs .ticket > ul > li > a dt.noimg img{opacity:1; visibility:visible; filter:alpha(opacity=100); -ms-filter:alpha(opacity=100); width:100%; height:auto; }
+.bbs .ticket > ul > li > a dt .imgs {width:100%; background-repeat:no-repeat; background-position:center center; background-size:cover; padding-bottom:55%;}
+.bbs .ticket > ul > li > a dd{width:100%;}
+.bbs .ticket > ul > li > a dd.date{font-size:14px; color:#828282; padding:10px 0; text-align:left; padding-left:12px;}
+.bbs .ticket > ul > li > a dd.title{font-size:18px; font-weight:700; min-height:40px; text-align:left; padding-left:12px;}
+.bbs .ticket > ul > li > a dd.contents{font-size:15px; font-weight:500; min-height:40px; text-align:left; padding-left:12px;}
+.bbs .ticket > ul > li > a dd.btnArea .btn{width:45%;}
+
+.dateList {width:100%; height:60px; position:relative;}
+.dateList .dateArea {width:7%; height:50px; float:left; vertical-align:middle; text-align:center; line-height:30px; cursor:pointer;}
+.dateList .dateArea .month{font-size:25px; font-weight:800;}
+.dateList .dateArea .date{font-size:20px; font-weight:500;}
+.dateList .dateArea .sat{color:#4f6aea}
+.dateList .dateArea .sun{color:#fe4238}
