--- a/WebContent/css/contents.css
+++ b/WebContent/css/contents.css
@@ -318,6 +318,7 @@
 
 .dateList {width:100%; height:60px; position:relative;}
 .dateList .dateArea {width:7%; height:50px; float:left; vertical-align:middle; text-align:center; line-height:30px; cursor:pointer;}
+.dateList .dateArea.active{border-bottom:2px solid #351f66;}
 .dateList .dateArea .month{font-size:25px; font-weight:800;}
 .dateList .dateArea .date{font-size:20px; font-weight:500;}
 .dateList .dateArea .sat{color:#4f6aea}
