--- a/WebContent/css/common.css
+++ b/WebContent/css/common.css
@@ -108,13 +108,19 @@ html, body {
     height: 70px;
     top: 25px;
 }
-.head_top .size .util {position:absolute; right:0; top:50%; margin-top:-15px;   }
+.head_top .size .util {position:absolute; right:0; top:10%; margin-top:-15px;   }
 .head_top .size .util a {display:block; float:left; padding:0 10px; position:relative; height:30px; line-height:30px; color:rgba(102,103,104,.75); font-size:16px;  font-weight:300;}
  _:-ms-input-placeholder, :root .head_top .size .util a {font-size:15px;}
 .head_top .size .util a.last {padding-right:0;}
 .head_top .size .util a:before {position:absolute; width:1px; height:8px; background:#cacaca; top:50%; margin-top:-4px; left:-.5px; clear:both; content:''; display:block; }
 .head_top .size .util a:first-child {padding-left:0;}
 .head_top .size .util a:first-child:before {display:none; }
+
+.head_top .size .search {position:absolute; right:0; top:80%; }
+.head_top .size .search .searchWord {position:relative; width:200px; margin-right:5px;}
+.head_top .size .search .searchWord input[type='text'] {height:30px; box-sizing:border-box; padding:5px 30px 5px 5px; border:0; width:100%; line-height:32px; background-color:#fff; border:1px solid #c7c8cc; vertical-align:middle;}
+.head_top .size .search .searchWord input[type='button'] {border:0; height:25px; width:25px; text-indent:-9999em; position:absolute; top:0; right:5px; background:url('/img/ico_search.png') no-repeat center center ; display:inline-block;}
+.head_top .size .search .searchWord input::placeholder {color:#c7c8cc}
 
 .head_bot {width:100%; box-sizing:border-box; border-top:1px solid #dadada; border-bottom:1px solid #dadada;}
 .head_bot .gnb {width:100%; position:relative;}
